refactor: 리뷰 매핑 로직 ReviewMapper로 분리하고 PlaceServiceImpl 간소화